# payment-skill

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  install-claudecode.md  install-openclaw.md  install.md  skill.md
.cargo/: config.toml
.github/workflows/: ci.yml
claude/skills/payment/: SKILL.md  install.md
create-wallet/: Cargo.toml  README.md
create-wallet/src/: main.rs
docs/: CNAME  index.html
get-address/: Cargo.toml  README.md
get-address/src/: main.rs
openclaw/skills/payment/: SKILL.md  install.md
pay/: Cargo.toml  README.md
pay/src/: main.rs
payment-common/: Cargo.toml
payment-common/src/: config.rs  error.rs  lib.rs  wallet.rs
payment-config/: Cargo.toml  README.md
payment-config/src/: main.rs
skill/: SKILL.md  bootstrap.sh  config-default.toml  create-wallet  get-address  install.md  pay  skill.md  x402-config  x402curl
skill/scripts/: .gitignore
skills/: install.md
skills/payment/: SKILL.md  config-default.toml  install.md
x402-common/: Cargo.toml
x402-common/src/: config.rs  lib.rs  wallet.rs
x402-config/: Cargo.toml  README.md
x402-config/src/: main.rs
x402curl/: Cargo.toml
x402curl/src/: main.rs
