[workspace]
resolver = "2"
members = [
    "x402-common",
    "x402-config",
    "create-wallet",
    "get-address",
    "pay",
    "x402curl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["x402 Agent"]
license = "MIT"

[workspace.dependencies]
# Ethereum / crypto
ethers = "2.0"
secp256k1 = "0.29"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Encryption for wallet storage
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"
