[package]
name = "create-wallet"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Create a new Ethereum-compatible wallet for payments"

[[bin]]
name = "create-wallet"
path = "src/main.rs"

[dependencies]
payment_common = { path = "../payment-common" }
clap = { version = "4", features = ["derive"] }
