[package]
name = "get-address"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Get the public address and token balance from a payment wallet"

[[bin]]
name = "get-address"
path = "src/main.rs"

[dependencies]
payment_common = { path = "../payment-common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
alloy = { version = "1.0", default-features = false, features = [
    "providers",
    "provider-http",
    "rpc-types",
    "network",
    "contract",
    "sol-types",
    "reqwest-rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
