[package]
name = "x402_common"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Shared utilities for x402 payment tools"

[dependencies]
# Ethereum - use rustls for static builds
alloy = { version = "1.0", default-features = false, features = [
    "signers",
    "signer-local",
    "reqwest-rustls-tls",
] }
eth-keystore = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# File system
dirs = "6"

# Random generation
rand = "0.8"

[dev-dependencies]
tempfile = "3"
