[package]
name = "x402-config"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Configuration management for x402 tools"

[[bin]]
name = "x402-config"
path = "src/main.rs"

[dependencies]
x402_common = { path = "../x402-common" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
